fix: fixed header section overlaps sort popover when scrolling

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -273,9 +273,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 9999;
     width: 100%;
-    z-index: 40;
     max-width: 100%;
     margin: 0;
     padding: 0;
